# llm_challenge_august

./: .gitignore  QOET_tutorial.json  README.md  appHelperFunction.py  appMain.py  appNotThis.py  convertRawToJson  convertRawToJson2.py  copyFiles.py  embeddings_text.csv  firstRunArnel_train.json  gpt3p5-with-top6-embeddings_tutorial.json  pyproject.toml
data/: DS28E04-100_orig.txt  README.md  ltc7804_orig.txt
data/datasheets/parsed/: 6416f.txt  ADV7611.txt  ltc7804.txt
data/qas/: contexts_train.json  contexts_tutorial.json  embeddings_tutorial.npz  qas_train.json  qas_tutorial.json  qas_wo_answers_test.json
data/qas/db_test/: chroma-collections.parquet
data/qas/db_test/index/: id_to_uuid_f6b0fb97-655d-4cbc-a6af-8e4c07f6a8c3.pkl  index_metadata_f6b0fb97-655d-4cbc-a6af-8e4c07f6a8c3.pkl  uuid_to_id_f6b0fb97-655d-4cbc-a6af-8e4c07f6a8c3.pkl
data/qas/db_train/: chroma-collections.parquet
data/qas/db_train/index/: id_to_uuid_7c80883a-8179-4ecd-8d57-86053d77b232.pkl  index_metadata_7c80883a-8179-4ecd-8d57-86053d77b232.pkl  uuid_to_id_7c80883a-8179-4ecd-8d57-86053d77b232.pkl
data/qas/db_tutorial/: chroma-collections.parquet  chroma.sqlite3
data/qas/db_tutorial/index/: id_to_uuid_1dafbd61-9761-43b4-8ec5-5ce2e5a076cb.pkl  (+2 more)
docs/: DATA.md  EVAL.md  PYENV.md
llm_challenge/: evaluation.py
llm_challenge/utils/: misc.py
notebooks/: gpt3p5-with-top6-embeddings_tutorial.json  gpt3p5_tutorial.json  nb01-interacting-with-llm-basic-concepts.ipynb  nb02-fetching-context-for-llm.ipynb  nb03-qa-with-vector-store.ipynb  nb04-react.ipynb
scripts/: evaluate.py
